--- a/stm32IRconfig_new_protocol/README
+++ b/stm32IRconfig_new_protocol/README
@@ -1,7 +1,10 @@
 configure and monitor STM32IR
+
 Usage:
 stm32IRconfig /dev/hidraw1
-program and read the eeprom (wakeup, macro)
+
+program and read the eeprom (wakeups, macros and capabilities)
+reset wakeups, macros and alarm
 set and get the alarm
 send IR
 monitor (read) STM32IR, stop with ^C
