--- a/old/stm32IRconfig_old_protocol/README
+++ b/old/stm32IRconfig_old_protocol/README
@@ -1,10 +1,7 @@
 configure and monitor STM32IR
-
 Usage:
 stm32IRconfig /dev/hidraw1
-
-program and read the eeprom (wakeups, macros and capabilities)
-reset wakeups, macros and alarm
+program and read the eeprom (wakeup, trigger_send, send[0], send[1])
 set and get the alarm
 send IR
 monitor (read) STM32IR, stop with ^C
