added CooCox project file for bootloader changed README for bootloader compilation bootloader patch cosmetics

--- a/STM32F103/README
+++ b/STM32F103/README
@@ -1,2 +1,4 @@
 If you want to use gcc-4.9, you have to compile with -O0 or -O3 instead of -Os.
 For gcc-4.8 leave -Os.
+
+If the firmware shall be used with the bootloader, compile with "make Bootloader=1".
