improved automatic start and stop of irmplird

--- a/stm32IRalarm/README
+++ b/stm32IRalarm/README
@@ -15,4 +15,4 @@ stm32IRalarm [-d /dev/hidraw0] -s $2
 commands.conf:
 stm32IRalarm [-d /dev/hidraw2] -a
 
-put the udev rule from stm32IRconfig into your udev rules directory, then you don't need to give a device
+put the udev rule from irmplircd into your udev rules directory, then you don't need to give a device
