--- a/stm32IRconfig/README
+++ b/stm32IRconfig/README
@@ -9,6 +9,4 @@ set and get the alarm
 send IR
 monitor (read) STM32IR, stop with ^C
 
-put the udev rule into your udev rules directory, then you don't need to give a device, just run ./stm32IRconfig
-the irmplircd@.service is tested on opensuse 13.2
-passing on %k is not really needed, you could use irmp_stm32 as well
+put the udev rule from irmplircd into your udev rules directory, then you don't need to give a device
