--- a/bootloader/README
+++ b/bootloader/README
@@ -1,4 +1,6 @@
 These patches are against Tormod Volden's unify_platforms branch of his maple-bootloader github repository, checked out on 13.1.2015. [1]
+A patch for gcc-4.9 with -Os is added [2].
+For convenience a fork is in [3].
 
 One is for the developer board, one for the red ST-Link emulator and one for the blue ST-Link emulator.
 
@@ -11,9 +13,8 @@ In case the disconnect pin is set, the disconnect pin is open and the pullup dra
 
 The firmware, which gets loaded by the bootloader, needs to be adapted (vector table and linker) and has to release the USB_DISC_PIN again.
 Compile the firmware with "make Bootloader=1".
-For gcc-4.9 a patch is needed [3].
-
 
 [1] https://github.com/tormodvolden/maple-bootloader/tree/unify_platforms
-[2] https://github.com/EvvGC/Hardware/blob/master/EvvGC%20v1.3/EvvGC%20vpre1.3ce2.pdf?raw=true
-[3] https://github.com/M-Reimer/maple-bootloader/commit/69ed54ad186bb0c65aec1dbd46d89a416dd0e0d6
+[2] https://github.com/j1rie/maple-bootloader/commit/69ed54ad186bb0c65aec1dbd46d89a416dd0e0d6
+[3] https://github.com/j1rie/maple-bootloader/tree/unify_platforms
+[4] https://github.com/EvvGC/Hardware/blob/master/EvvGC%20v1.3/EvvGC%20vpre1.3ce2.pdf?raw=true
