--- a/bootloader/README
+++ b/bootloader/README
@@ -1,8 +1,10 @@
-These patches are against Tormod Volden's unify_platforms branch of his maple-bootloader github repository, checked out on 13.1.2015. [1]
+This patch is against Tormod Volden's unify_platforms branch of his maple-bootloader github repository, checked out on 13.1.2015. [1]
 A patch for gcc-4.9 with -Os is added [2].
-For convenience a fork is in [3].
+For convenience a fork with the patch applied is in [3].
 
-One is for the developer board, one for the red ST-Link emulator and one for the blue ST-Link emulator.
+For the developer board compile with make PLATFORM=Dev Small=1,
+for the red ST-Link emulator compile with make PLATFORM=Red Small=1
+and for the blue ST-Link emulator compile with make PLATFORM=Blue Small=1.
 
 A pulldown resistor from USBDP to the USB disconnect pin of 220 ohm needs to be added.
 A pullup resistor of 1,5 kohm is already present.
