--- a/bootloader/README
+++ b/bootloader/README
@@ -12,7 +12,7 @@ In case the opendrain disconnect pin is reset, the disconnect pin is drawn to gr
 In case the disconnect pin is set, the disconnect pin is open and the pullup draws USBDP to VDD.
 
 The firmware, which gets loaded by the bootloader, needs to be adapted (vector table and linker) and has to release the USB_DISC_PIN again.
-Compile the firmware with "make Bootloader=1".
+For that compile the firmware with "make Bootloader=1".
 
 Once the bootloader is flashed, you flash the new firmware like this:
 First run /path/FlashDFUSe.sh /path/newFirmware.bin,
