--- a/stm32IRconfig_gui/Windows/README
+++ b/stm32IRconfig_gui/Windows/README
@@ -1,3 +1,3 @@
-hidapi-externals von https://github.com/downloads/signal11/hidapi/hidapi-externals.zip
-herunterladen und so auspacken, dass die beiden Verzeichnisse hidapi und hidapi-externals
-nebeneinander im selben Verzeichnis liegen.
+Get hidapi-externals from https://github.com/downloads/signal11/hidapi/hidapi-externals.zip
+Put the content of this folder into the directory hidapi, which has to be parallel to
+hidapi-externals, so that both are in the same parent directory.
