--- a/binaries/stm32IRconfig_gui/Windows/newer/README
+++ b/binaries/stm32IRconfig_gui/Windows/newer/README
@@ -1,1 +1,2 @@
 built with fox-1.7.51, libpng-1.6.17 and zlib-1.2.8
+If Windows complains about MSVCR120.dll, you need to install vcredist_x86.exe from Microsoft.
