--- a/binaries/README
+++ b/binaries/README
@@ -1,3 +1,2 @@
-The bootloaders are compiled with gcc-arm-none-eabi-4_8-2014q3-20140805-linux.
-The firmwares are compiled with gcc-arm-none-eabi-4_9-2015q3-20150921-linux.
-See https://launchpad.net/gcc-arm-embedded/+download.
+The compiler is from
+https://developer.arm.com/open-source/gnu-toolchain/gnu-rm/downloads
