--- a/bootloader/README
+++ b/bootloader/README
@@ -1,13 +1,15 @@
-The bootloader is in [1].
+The bootloaders are in [1], [2] and [3].
 
 The firmware, which gets loaded by the bootloader, has to make an USB reset for 
 reenumeration. For this compile the firmware with "make Bootloader=1".
 
 Once the bootloader is flashed, you flash the new firmware like this:
-First run /path/FlashDFUSe.sh /path/newFirmware.bin,
-then connect the board.
+First run /path/FlashDFUxxx.sh /path/newFirmware.bin,
+then connect or reset or reboot the board.
 
 I made a patch for dfu-util, which lets's dfu-util loop, so this needs no longer be done in a script.
-Patched binaries are in ../binaries.
 
 [1] https://github.com/j1rie/maple-bootloader/tree/unify_platforms
+[2] https://github.com/j1rie/STM32F103-bootloader
+[3] https://github.com/j1rie/STM32F105-bootloader
+
