--- a/irmplircd/LibreELEC/README
+++ b/irmplircd/LibreELEC/README
@@ -3,3 +3,4 @@ cd ~
 wget https://raw.githubusercontent.com/j1rie/IRMP_STM32/master/irmplircd/LibreELEC/irmplircd.tar.bz2
 tar -xjvf irmplircd.tar.bz2
 systemctl enable irmplircd kodi
+and reboot
