--- a/irmplircd/yaVDR-ansible Bionic/README
+++ b/irmplircd/yaVDR-ansible Bionic/README
@@ -2,7 +2,7 @@ The receiver is installed automatically.
 If not, do a sudo apt-get install yavdr-hardware-irmp
 
 Get a template map:
-wget  https://raw.githubusercontent.com/j1rie/IRMP_STM32/master/irmplircd/yaVDR/irmp.map
+wget  https://raw.githubusercontent.com/j1rie/IRMP_STM32/master/irmplircd/yaVDR-0.6.2%20Xenial/irmp.map
 mv irmp.map irmplircd.map
 
 Edit /etc/irmplircd/irmplircd.map and insert the codes from your remote control, which you see
