--- a/irmplircd/Ubuntu 16.04 Xenial/README
+++ b/irmplircd/Ubuntu 16.04 Xenial/README
@@ -5,6 +5,15 @@ cd /etc/irmplircd
 wget  https://raw.githubusercontent.com/j1rie/IRMP_STM32/master/irmplircd/yaVDR-0.6.2%20Xenial/irmp.map
 mv irmp.map irmplircd.map
 
+The stm32IRconfig_gui can be used for building a keymap from the template /etc/irmplircd/irmplircd.map with the remote control.
+Press "receive mode" and open /etc/irmplircd/irmplircd.map .
+Click the line with the button's name, press the button on the remote, press "write IR" - repeat this for all buttons.
+You can test the keymap immediately: After pressing the button on the remote, the red cursor should be in the coresponding line.
+At the end press "save" and save the keymap.
+
+See also https://www.mikrocontroller.net/articles/IRMP_auf_STM32_-_ein_USB_IR_Empf%C3%A4nger/Sender/Einschalter_mit_Wakeup-Timer#Creating_a_keymap
+
+Without gui:
 Edit /etc/irmplircd/irmplircd.map and insert the codes from your remote control, which you see
 with 'sudo irw /var/run/lirc/irmplircd' (or stm32IRconfig or stm32IRconfig_gui).
 
@@ -16,6 +25,4 @@ press "1".
 sudo apt-get install eventlircd
 cd /lib/udev/rules.d
 mv 98-eventlircd.rules.disabled 98-eventlircd.rules
-shutdown -r now
-
-
+Reboot in order to apply the changes.
