--- a/irmplircd/Ubuntu 16.04 Xenial/README
+++ b/irmplircd/Ubuntu 16.04 Xenial/README
@@ -3,7 +3,7 @@ sudo apt-get update
 sudo apt-get install yavdr-hardware-irmp 
 cd /etc/irmplircd
 wget  https://raw.githubusercontent.com/j1rie/IRMP_STM32/master/irmplircd/yaVDR-0.6.2%20Xenial/irmp.map
-mv irmp.map irmplircd.map
+mv irmp.map /etc/irmplircd/irmplircd.map
 
 The stm32IRconfig_gui can be used for building a keymap from the template /etc/irmplircd/irmplircd.map with the remote control.
 Press "receive mode" and open /etc/irmplircd/irmplircd.map .
