--- a/irmplircd/README
+++ b/irmplircd/README
@@ -1,5 +1,5 @@
 for automatic start and stop of irmplircd during boot and on device dis/reconnect
-put the udev rule into your udev rules directory (/etc/udev/rules.d/) and
-put the systemd service into your services directory (/etc/systemd/system/)
-put the systemd-tmpfiles config file into your tmpfiles directory (/etc/tmpfiles.d/)
+put the udev rule '70-irmp.rules' into your udev rules directory (/etc/udev/rules.d/) and
+put the systemd service 'irmplircd.service' into your services directory (/etc/systemd/system/)
+put the systemd-tmpfiles config file 'irmplircd.conf' into your tmpfiles directory (/etc/tmpfiles.d/)
 and run "systemctl enable irmplircd.service" once
