thanks for the extension boards

--- a/hardware/README
+++ b/hardware/README
@@ -1,4 +1,4 @@
-For the sticks there are several hardware designs
+For the sticks there are several hardware designs.
 Make sure the extension board fits your stick.
 
 Stick1_jr1 is based on [1].
