--- a/bootloader/README
+++ b/bootloader/README
@@ -5,11 +5,12 @@ reenumeration. For this compile the firmware with "make Bootloader=1".
 
 Once the bootloader is flashed, you flash the new firmware like this:
 First run /path/FlashDFUxxx.sh /path/newFirmware.bin,
-then connect or reset or reboot the board.
+then (re)connect or reset or reboot the board.
 
 I made a patch for dfu-util, which lets's dfu-util loop, so this needs no longer be done in a script.
+dfu-util git contains that patch [4].
 
 [1] https://github.com/j1rie/maple-bootloader/tree/unify_platforms
 [2] https://github.com/j1rie/STM32F103-bootloader
 [3] https://github.com/j1rie/STM32F105-bootloader
-
+[4] git://git.code.sf.net/p/dfu-util/dfu-util
