removed forgotten line, improve irmpexec integration, make logging work

--- a/irmplircd/README
+++ b/irmplircd/README
@@ -6,7 +6,9 @@ put the systemd-tmpfiles config file 'irmplircd.conf' into your tmpfiles directo
 and run "systemctl enable irmplircd.service" once
 
 you want to know, if the computer was started by the receiver?
-run irmpexec with an irmpexec.map which touches /var/log/started_by_irmp_stm32 on receiving 'FF0000000000'
+put the systemd service 'irmpexec.service' into your services directory (/etc/systemd/system/)
+and run "systemctl enable irmpexec.service" once
+irmp_stm32.map needs to contain a line "ff0000000000 KEY_REFRESH"
 if 'stat -c %Y /var/log/started_by_irmp_stm32' is greater than 'stat -c %Y /var/log/boot.msg', the
 computer was started by the receiver
 You may use this in VDR's shutdownscript in order to not shut down on the first power key press, if the
