--- a/hardware/README
+++ b/hardware/README
@@ -1,8 +1,9 @@
 For the sticks there are several hardware designs.
 Make sure the extension board fits your stick.
 
-Stick1_jr1 is based on [1].
-
-[1]
+Stick1_jr1 is based on:
 https://github.com/ranseyer/STM32-IRMP-Hardware/tree/master/1_Small_ST-Link/STl-Link-V303-small.brd
 https://github.com/ranseyer/STM32-IRMP-Hardware/tree/master/1_Small_ST-Link/STl-Link-V303-small.sch
+
+I strongly recommend the optocoupler version. It is not very likely that you actually need it, but
+in case you do have a motherboard, which needs it, it will save you much debugging effort.
