--- a/binaries/README
+++ b/binaries/README
@@ -4,6 +4,6 @@ https://developer.arm.com/open-source/gnu-toolchain/gnu-rm/downloads
 For complete eeprom and firmware reset flash the file "ZEROS".
 Afterwards a new firmware needs to be flashed.
 
-Use Zadig [1] in order to create Windows USB drivers for the device in bootloader mode (WinUSB).
+The Windows USB drivers for the device in bootloader mode have been created by Zadig [1] (WinUSB).
 
 [1] https://zadig.akeo.ie
