--- a/irmplircd/Ubuntu 16.04 Xenial/README
+++ b/irmplircd/Ubuntu 16.04 Xenial/README
@@ -2,7 +2,7 @@ sudo add-apt-repository ppa:yavdr/unstable-main
 sudo apt-get update
 sudo apt-get install yavdr-hardware-irmp 
 cd /etc/irmplircd
-wget  https://raw.githubusercontent.com/j1rie/IRMP_STM32/master/irmplircd/yaVDR-0.6.2%20Xenial/irmp.map
+wget  https://raw.githubusercontent.com/j1rie/IRMP_STM32/master/irmplircd/yaVDR-0.6.2/irmp.map
 mv irmp.map /etc/irmplircd/irmplircd.map
 
 The stm32IRconfig_gui can be used for building a keymap from the template /etc/irmplircd/irmplircd.map with the remote control.
