comment on test conditions

--- a/test-suite/README
+++ b/test-suite/README
@@ -3,3 +3,8 @@ in test mode receives them and writes them into files.
 compare_testfiles.sh compares those files with a reference file and shows differences.
 
 For this you need irctl from https://github.com/olebowle/irctl
+
+You get error free test results only under good conditions.
+Best is daylight, a weak standard light bulb is already worse, and a strong LED light even more worse.
+Distance and angle from sending LED to TSOP have an influence on the result, too. To close with strong sender is bad.
+With identical TSOPs under difficult conditions one lost more and other protocols than the other.
