comment on IR receiver and connections for tm1637.h

--- a/hardware/README
+++ b/hardware/README
@@ -9,3 +9,6 @@ I strongly recommend the optocoupler version. It is not very likely that you act
 in case you do have a motherboard, which needs it, it will save you much debugging effort.
 
 If you like a tiny design, look at https://github.com/Sl-Alex/IRMP_STM32_MINI
+
+In case you want to attach a 4 digit display tm1637, connect:
+GND - GND, 5V - 5V, DIO - B11, CLK - B4, see st32tm1637.h.
