implement eeprom reset and minor fixes

--- a/stm32IRconfig/Linux/README
+++ b/stm32IRconfig/Linux/README
@@ -1,12 +1,13 @@
-configure and monitor STM32IR
+configure and monitor IRMP_STM32
 
 Usage:
 stm32IRconfig [/dev/hidraw1]
 
 program and read the eeprom (wakeups, macros and capabilities)
-reset wakeups, macros and alarm
+reset wakeups, macros and alarm and eeprom
 set and get the alarm
+reboot the device
 send IR
-monitor (read) STM32IR, stop with ^C
+monitor (read) IRMP_STM32, stop with ^C
 
 put the udev rule from irmplircd into your udev rules directory, then you don't need to give a device
