--- a/stm32IRconfig/Windows/README
+++ b/stm32IRconfig/Windows/README
@@ -1,12 +1,9 @@
-configure and monitor STM32IR
-
+configure and monitor IRMP_STM32
 Usage:
 stm32IRconfig
 
 program and read the eeprom (wakeups, macros and capabilities)
-reset wakeups, macros and alarm
+reset wakeups, macros, alarm and eeprom
 set and get the alarm
-reboot
+reboot the device
 send IR
-monitor (read) STM32IR, stop with ^C
-
