link to picture of RP2040-One

--- a/hardware/README
+++ b/hardware/README
@@ -8,7 +8,8 @@ https://github.com/ranseyer/STM32-IRMP-Hardware/tree/master/1_Small_ST-Link/STl-
 I strongly recommend the optocoupler version. It is not very likely that you actually need it, but
 in case you do have a motherboard, which needs it, it will save you much debugging effort.
 
-If you like a tiny design, take a look at https://github.com/Sl-Alex/IRMP_STM32_MINI
+If you like a tiny design, take a look at https://github.com/Sl-Alex/IRMP_STM32_MINI and at
+https://www.vdr-portal.de/index.php?attachment/48154-20230825-130009-jpg/
 
 In case you want to attach a 4 digit display tm1637, connect:
 GND - GND, 5V - 5V, DIO - B11, CLK - B4, see st32tm1637.h.
