--- a/stm32IRstatusled/README
+++ b/stm32IRstatusled/README
@@ -5,7 +5,7 @@ Usage:
 stm32IRstatusled [-d device] -s led_state
 
 Examples:
-switch the statusled on stm32IRstatusled -d /dev/hidraw1 -s 1
-switch the statusled offm32IRstatusled -d /dev/hidraw1 -s 0
+switch the statusled on:  stm32IRstatusled -d /dev/hidraw1 -s 1
+switch the statusled off: stm32IRstatusled -d /dev/hidraw1 -s 0
 
 put the udev rule from irmplircd into your udev rules directory, then you don't need to give a device
