support RP235x, rename RP2040 to RP2xxx because of RP235x, small fixes, cleanup

--- a/stm32IRconfig/Linux/README
+++ b/stm32IRconfig/Linux/README
@@ -4,7 +4,7 @@ Usage:
 stm32IRconfig [/dev/hidraw1]
 
 program and read the eeprom (wakeups, macros and capabilities)
-reset wakeups, macros and alarm and eeprom
+reset wakeups, macros, alarm and eeprom
 set and get the alarm
 reboot the device
 send IR
